user name no longer renders for messages right aligned

--- a/client/src/containers/MessageContainer/style.css
+++ b/client/src/containers/MessageContainer/style.css
@@ -27,10 +27,13 @@
 #message-text {
     font-size: 25px;
     margin-left: 10px;
+    margin-right: 10px;
+
 }
 
 #date {
     margin-left: 10px;
+    margin-right: 10px;
 }
 
 #translate-btn {
